--- a/contact.html
+++ b/contact.html
@@ -34,19 +34,19 @@
             </div>
             <nav class="social-links">
                 <a href="https://grabcad.com/luan.henrique-11/models"> <i class="fas fa-drafting-compass fa-2x    " ></i></a>
-                <a href="https://linkedin.com/luanzzxx"><i class="fab fa-linkedin-in fa-2x " > </i></a>
+                <a href="https://linkedin.com/in/luanzzxx"><i class="fab fa-linkedin-in fa-2x " > </i></a>
                 <a href="https://github.com/luaneng"><i class="fab fa-github fa-2x  "> </i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">Informações Pessoais</h5>
                 <div class="widget-content">
                     <p>NASCIMENTO: 07 Agosto 1998</p>
-                    <p>SITE : <a target="_blank" rel="noopener noreferrer" href="https://github.com/luaneng">github.com/luaneng</a></p>
-                    <p>NÚMERO : <a target="_blank" rel="noopener noreferrer" href="https://api.whatsapp.com/send?phone=5542984449614">+55 (42)98444-9614</a></p>
+                    <p>SITE : <a target="_blank" rel="noopener noreferrer" href="https://luaneng.github.io/profile">luaneng.github.io/profile</a></p>
+                    <p>NÚMERO : <a target="_blank" rel="noopener noreferrer" href="https://api.whatsapp.com/send?phone=5542984449614">+55 (42) 98444-9614</a></p>
                     <p>EMAIL : launoliveiar@gmail.com</p>
                     <p>ENDEREÇO : <a target="_blank" rel="noopener noreferrer" href="https://goo.gl/maps/g3YFnzuBhQuAjz7YA">Guarapuava-PR, Vila Bela</a></p>
                     <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
-                        class="btn-img"><a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/file/d/1Gl5ajKC_g90UPr2rEuTsfqhd7AFmumIZ/view?usp=sharing" style="color:#ffffff;">DOWNLOAD</a></button>
+                        class="btn-img"><a target="_blank" rel="noopener noreferrer" href="https://github.com/luaneng/profile/raw/main/assets/CV%20Luan%20Henrique%20de%20Oliveira.pdf" style="color:#ffffff;">DOWNLOAD</a></button>
                 </div>
             </div>
             <div class="widget card">
