--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a target="_blank" rel="noopener noreferrer" href="https://grabcad.com/luan.henrique-11/models">
                     <i class="fas fa-drafting-compass fa-2x    "></i></a>
                 </a>
-                <a target="_blank" rel="noopener noreferrer" href="https://linkedin.com/luanzzxx">
+                <a target="_blank" rel="noopener noreferrer" href="https://linkedin.com/in/luanzzxx">
                     <i class="fab fa-linkedin-in fa-2x     "></i></a>
                 </a>
                 <a target="_blank" rel="noopener noreferrer" href="https://github.com/luaneng">
@@ -47,12 +47,12 @@
                 <h5 class="widget-title">Informações Pessoais</h5>
                 <div class="widget-content">
                     <p>NASCIMENTO: 07 Agosto 1998</p>
-                    <p>SITE : <a target="_blank" rel="noopener noreferrer" href="https://github.com/luaneng">github.com/luaneng</a></p>
-                    <p>NÚMERO : <a target="_blank" rel="noopener noreferrer" href="https://api.whatsapp.com/send?phone=5542984449614">+55 (42)98444-9614</a></p>
+                    <p>SITE : <a target="_blank" rel="noopener noreferrer" href="https://luaneng.github.io/profile">luaneng.github.io/profile</a></p>
+                    <p>NÚMERO : <a target="_blank" rel="noopener noreferrer" href="https://api.whatsapp.com/send?phone=5542984449614">+55 (42) 98444-9614</a></p>
                     <p>EMAIL : launoliveiar@gmail.com</p>
                     <p>ENDEREÇO : <a target="_blank" rel="noopener noreferrer" href="https://goo.gl/maps/g3YFnzuBhQuAjz7YA">Guarapuava-PR, Vila Bela</a></p>
                     <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
-                        class="btn-img"><a target="_blank" rel="noopener noreferrer" href="https://github.com/luaneng/profile/raw/main/assets/cv.pdf" style="color:#ffffff;">DOWNLOAD</a></button>
+                        class="btn-img"><a target="_blank" rel="noopener noreferrer" href="https://github.com/luaneng/profile/raw/main/assets/CV%20Luan%20Henrique%20de%20Oliveira.pdf" style="color:#ffffff;">DOWNLOAD</a></button>
                 </div>
             </div>
             <div class="widget card">
@@ -71,7 +71,6 @@
                         <p>Programação</p>
                         <p>Automação Industrial</p>
                         <p>Modelagem 3D</p>
-
                     </div>
                 </div>
             </div>
@@ -79,7 +78,9 @@
         <main>
             <section class="intro-section">
                 <h2 class="section-title">Olá!</h2>
-                <p>Descrição geral.</p>
+                <p>Busco uma oportunidade de estágio no mercado de trabalho na área de engenharia mecânica a qual 
+                    eu gostaria de compartilhar meu conhecimento obtido na graduação, 
+                    extensões e cursos propondo soluções eficientes e somando a equipe de trabalho.</p>
                 <a href="contact.html" class="btn btn-primary btn-hire-me">CONTRATE-ME</a>
             </section>
             <section class="resume-section">
@@ -92,13 +93,14 @@
                                 <span class="badge badge-primary">2018 - 2022</span>
                                 <h6 class="time-line-item-title">Engenharia Mecânica</h6>
                                 <p class="time-line-item-subtitle">Universidade Tecnológica Federal do Paraná - UTFPR</p>
-                                <p class="time-line-item-content">Descrição.</p>
+                                <p class="time-line-item-content">Participação em projetos de extensão atuando como capitão de equipe, destaque em áreas 
+                                    de mecânica dos sólidos e desenho industrial com previsão de conclusão em dezembro de 2022.</p>
                             </li>
                             <li class="time-line-item">
                                 <span class="badge badge-primary">2013-2017</span>
                                 <h6 class="time-line-item-title">Ensino Médio</h6>
                                 <p class="time-line-item-subtitle">Colégio Estadual Francisco Carneiro Martins</p>
-                                <p class="time-line-item-content">Descrição.
+                                <p class="time-line-item-content">
                                 </p>
                             </li>
                         </ul>
@@ -108,33 +110,37 @@
                         <h2 class="section-title">Cursos</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
+                                <span class="badge badge-primary">2021</span>
+                                <h6 class="time-line-item-title">Manufatura Avançada E Indústria 4.0</h6>
+                                <p class="time-line-item-subtitle">UTFPR- Campus Curitiba</p>
+                                <p class="time-line-item-content">Curso com objetivo de proporcionar uma visão do cenário de revolução tecnológica 
+                                    que a manufatura está prestes a experimentar diante dos avanços tecnológicos em Tecnologias de Informação e Comunicação.
+                                </p>
+                            </li>
+                            <li class="time-line-item">
+                                <span class="badge badge-primary">2021</span>
+                                <h6 class="time-line-item-title">Ciências do Ambiente e Sustentabilidade</h6>
+                                <p class="time-line-item-subtitle">UTFPR- Campus Toledo</p>
+                                <p class="time-line-item-content">Noções gerais de ecologia, ecossistema, ciclos biogeoquímicos, 
+                                    poluição, contaminação, energia e recursos minerais juntamente de estudos de casos.
+                                </p>
+                            </li>
+                            <li class="time-line-item">
                                     <span class="badge badge-primary">2019</span>
                                     <h6 class="time-line-item-title">Computational Thinking using Python</h6>
                                     <p class="time-line-item-subtitle">edX</p>
-                                    <p class="time-line-item-content">Descrição.
+                                    <p class="time-line-item-content">Curso com objetivo de abordar problemas de forma sistemática e 
+                                        expressar uma solução que possa ser realizado por um computador em linguagem Python.
                                     </p>
                                 </li>
                                 <li class="time-line-item">
                                     <span class="badge badge-primary">2015</span>
                                     <h6 class="time-line-item-title">INGLÊS INTRODUÇÃO</h6>
                                     <p class="time-line-item-subtitle">SENAC</p>
-                                    <p class="time-line-item-content">Descrição.
+                                    <p class="time-line-item-content">
                                     </p>
                                 </li>
-                                <li class="time-line-item">
-                                    <span class="badge badge-primary">2021</span>
-                                    <h6 class="time-line-item-title">Manufatura Avançada E Indústria 4.0</h6>
-                                    <p class="time-line-item-subtitle">UTFPR- Campus Curitiba</p>
-                                    <p class="time-line-item-content">Descrição.
-                                    </p>
-                                </li>
-                                <li class="time-line-item">
-                                    <span class="badge badge-primary">2021</span>
-                                    <h6 class="time-line-item-title">Ciências do Ambiente e Sustentabilidade</h6>
-                                    <p class="time-line-item-subtitle">UTFPR- Campus Toledo</p>
-                                    <p class="time-line-item-content">Descrição.
-                                    </p>
-                                </li>
+
                         </ul>
                     </div>
                 </div>
@@ -149,7 +155,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Solidworks – CAD, CAE</h5>
-                            <p class="service-description">Descrição.</p>
+                            <p class="service-description">Conhecimento na área de modelagem 3d, desenho técnico e simulações.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -158,7 +164,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Fusion 360 – CAD, CAM</h5>
-                            <p class="service-description">Descrição.</p>
+                            <p class="service-description">Conhecimento na área de modelagem 3d e manufatura.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -176,7 +182,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Excel</h5>
-                            <p class="service-description">Intermediário.
+                            <p class="service-description">Nível Intermediário.
                             </p>
                         </div>
                     </div>
@@ -186,7 +192,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">MS Project</h5>
-                            <p class="service-description">Básico.</p>
+                            <p class="service-description">Nível Básico.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -195,7 +201,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Powerpoint, Word</h5>
-                            <p class="service-description">Descrição.</p>
+                            <p class="service-description">Nível intermediário.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -204,7 +210,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Adobe Photoshop</h5>
-                            <p class="service-description">Descrição.</p>
+                            <p class="service-description">Nível intermediário.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -222,7 +228,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Trabalho em equipe</h5>
-                            <p class="service-description">Descrição.</p>
+                            <p class="service-description"> </p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -231,7 +237,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Proatividade</h5>
-                            <p class="service-description">Descrição.</p>
+                            <p class="service-description"> </p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -240,8 +246,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Capacidade de análise</h5>
-                            <p class="service-description">Descrição.
-                            </p>
+                            <p class="service-description"> </p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -250,8 +255,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Organização</h5>
-                            <p class="service-description">Descrição.
-                            </p>
+                            <p class="service-description"> </p>
                         </div>
                     </div>
                 </div>
