--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
         <main>
             <section class="intro-section">
                 <h2 class="section-title">Olá!</h2>
-                <p>Busco uma oportunidade de estágio no mercado de trabalho na área de engenharia mecânica a qual 
-                    eu gostaria de compartilhar meu conhecimento obtido na graduação, 
-                    extensões e cursos propondo soluções eficientes e somando a equipe de trabalho.</p>
+                <p>Neste momento estou à procura de uma oportunidade de estágio na área de engenharia mecânica, 
+                    a qual tenho como objetivo compartilhar meu conhecimento obtido na graduação, extensões e cursos 
+                    propondo soluções eficientes de forma a somar a equipe de
+                     trabalho da melhor maneira possível e assim conquistar um crescimento dentro da indústria.</p>
                 <a href="contact.html" class="btn btn-primary btn-hire-me">CONTRATE-ME</a>
             </section>
             <section class="resume-section">
@@ -173,7 +174,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Python</h5>
-                            <p class="service-description">Matplotlib, Pandas, Numpy, CoolProp, Scipy.</p>
+                            <p class="service-description">Conhecimento acerca dos pacotes Matplotlib, Pandas, Numpy, CoolProp e Scipy.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
