--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <main>
             <section class="intro-section">
                 <h2 class="section-title">Olá!</h2>
-                <p>Neste momento estou à procura de uma oportunidade de estágio na área de engenharia mecânica, 
+                <p align="justify">Neste momento estou à procura de uma oportunidade de estágio na área de engenharia mecânica, 
                     a qual tenho como objetivo compartilhar meu conhecimento obtido na graduação, extensões e cursos 
                     propondo soluções eficientes de forma a somar a equipe de
                      trabalho da melhor maneira possível e assim conquistar um crescimento dentro da indústria.</p>
@@ -93,8 +93,8 @@
                             <li class="time-line-item">
                                 <span class="badge badge-primary">2018 - 2022</span>
                                 <h6 class="time-line-item-title">Engenharia Mecânica</h6>
-                                <p class="time-line-item-subtitle">Universidade Tecnológica Federal do Paraná - UTFPR</p>
-                                <p class="time-line-item-content">Participação em projetos de extensão atuando como capitão de equipe, destaque em áreas 
+                                <p class="time-line-item-subtitle" align="justify">Universidade Tecnológica Federal do Paraná - UTFPR</p>
+                                <p class="time-line-item-content" align="justify">Participação em projetos de extensão atuando como capitão de equipe, destaque em áreas 
                                     de mecânica dos sólidos e desenho industrial com previsão de conclusão em dezembro de 2022.</p>
                             </li>
                             <li class="time-line-item">
@@ -114,7 +114,7 @@
                                 <span class="badge badge-primary">2021</span>
                                 <h6 class="time-line-item-title">Manufatura Avançada E Indústria 4.0</h6>
                                 <p class="time-line-item-subtitle">UTFPR- Campus Curitiba</p>
-                                <p class="time-line-item-content">Curso com objetivo de proporcionar uma visão do cenário de revolução tecnológica 
+                                <p class="time-line-item-content" align="justify">Curso com objetivo de proporcionar uma visão do cenário de revolução tecnológica 
                                     que a manufatura está prestes a experimentar diante dos avanços tecnológicos em Tecnologias de Informação e Comunicação.
                                 </p>
                             </li>
@@ -122,7 +122,7 @@
                                 <span class="badge badge-primary">2021</span>
                                 <h6 class="time-line-item-title">Ciências do Ambiente e Sustentabilidade</h6>
                                 <p class="time-line-item-subtitle">UTFPR- Campus Toledo</p>
-                                <p class="time-line-item-content">Noções gerais de ecologia, ecossistema, ciclos biogeoquímicos, 
+                                <p class="time-line-item-content" align="justify">Noções gerais de ecologia, ecossistema, ciclos biogeoquímicos, 
                                     poluição, contaminação, energia e recursos minerais juntamente de estudos de casos.
                                 </p>
                             </li>
@@ -130,7 +130,7 @@
                                     <span class="badge badge-primary">2019</span>
                                     <h6 class="time-line-item-title">Computational Thinking using Python</h6>
                                     <p class="time-line-item-subtitle">edX</p>
-                                    <p class="time-line-item-content">Curso com objetivo de abordar problemas de forma sistemática e 
+                                    <p class="time-line-item-content" align="justify">Curso com objetivo de abordar problemas de forma sistemática e 
                                         expressar uma solução que possa ser realizado por um computador em linguagem Python.
                                     </p>
                                 </li>
@@ -156,7 +156,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Solidworks – CAD, CAE</h5>
-                            <p class="service-description">Conhecimento na área de modelagem 3d, desenho técnico e simulações.</p>
+                            <p class="service-description" align="justify">Conhecimento na área de modelagem 3d, desenho técnico e simulações.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -165,7 +165,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Fusion 360 – CAD, CAM</h5>
-                            <p class="service-description">Conhecimento na área de modelagem 3d e manufatura.</p>
+                            <p class="service-description" align="justify">Conhecimento na área de modelagem 3d e manufatura.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -174,7 +174,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Python</h5>
-                            <p class="service-description">Conhecimento acerca dos pacotes Matplotlib, Pandas, Numpy, CoolProp e Scipy.</p>
+                            <p class="service-description" align="justify">Conhecimento acerca dos pacotes Matplotlib, Pandas, Numpy, CoolProp e Scipy.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
