--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <h2 class="section-title">EDUCAÇÃO</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
-                                <span class="badge badge-primary">2018 - 2022</span>
+                                <span class="badge badge-primary">2018 - Andamento</span>
                                 <h6 class="time-line-item-title">Engenharia Mecânica</h6>
                                 <p class="time-line-item-subtitle" align="justify">Universidade Tecnológica Federal do Paraná - UTFPR</p>
                                 <p class="time-line-item-content" align="justify">Participação em projetos de extensão atuando como capitão de equipe, destaque em áreas 
@@ -110,6 +110,31 @@
                         <h6 class="section-subtitle"></h6>
                         <h2 class="section-title">Cursos</h2>
                         <ul class="time-line">
+                            <li class="time-line-item">
+                                <span class="badge badge-primary">2022 - Andamento</span>
+                                <h6 class="time-line-item-title">English for Career Development</h6>
+                                <p class="time-line-item-subtitle">Coursera</p>
+                                <p class="time-line-item-content" align="justify">  </p>
+                            </li>
+                            <li class="time-line-item">
+                                <span class="badge badge-primary">2022 - Andamento</span>
+                                <h6 class="time-line-item-title">Machine Design Part I</h6>
+                                <p class="time-line-item-subtitle">Coursera</p>
+                                <p class="time-line-item-content" align="justify">O curso abrange tópicos fundamentais de projeto mecânico, 
+                                    como teorias de falhas estáticas e por fadiga, análise de eixos, fixadores e engrenagens e o 
+                                    projeto de sistemas mecânicos, como caixas de engrenagens, juntamente de estudo de casos. 
+                                </p>
+                            </li>
+                            <li class="time-line-item">
+                                <span class="badge badge-primary">2022 - Andamento</span>
+                                <h6 class="time-line-item-title">Machine Learning</h6>
+                                <p class="time-line-item-subtitle">Coursera</p>
+                                <p class="time-line-item-content" align="justify">O curso aborda aprendizagem supervisionada, aprendizagem não supervisionada, melhores técnicas de aprendizagem automática, 
+                                    estudos de caso e aplicações de algoritmos na construção de robôs inteligentes (percepção, controle), reconhecimento de texto (para pesquisa na web, anti-spam),
+                                     visão computacional, informática médica, 
+                                    áudio, mineração de dados, entre muitas outras áreas de aplicação.
+                                </p>
+                            </li>
                             <li class="time-line-item">
                                 <span class="badge badge-primary">2021</span>
                                 <h6 class="time-line-item-title">Manufatura Avançada E Indústria 4.0</h6>
