--- a/index.html
+++ b/index.html
@@ -119,21 +119,20 @@
                             </li>
                             <li class="time-line-item">
                                 <span class="badge badge-primary">2022 - Andamento</span>
+                                <h6 class="time-line-item-title">Introduction to Data Science in Python</h6>
+                                <p class="time-line-item-subtitle">Coursera</p>
+                                <p class="time-line-item-content" align="justify">O curso apresenta técnicas de manipulação e limpeza de dados usando a 
+                                    popular biblioteca de ciência de dados Pandas e também a abstração da
+                                     Series e DataFrames como as estruturas de dados centrais para análise de dados.
+                                </p>
+                            </li>
+                            <li class="time-line-item">
+                                <span class="badge badge-primary">2022</span>
                                 <h6 class="time-line-item-title">Machine Design Part I</h6>
                                 <p class="time-line-item-subtitle">Coursera</p>
                                 <p class="time-line-item-content" align="justify">O curso abrange tópicos fundamentais de projeto mecânico, 
                                     como teorias de falhas estáticas e por fadiga, análise de eixos, fixadores e engrenagens e o 
                                     projeto de sistemas mecânicos, como caixas de engrenagens, juntamente de estudo de casos. 
-                                </p>
-                            </li>
-                            <li class="time-line-item">
-                                <span class="badge badge-primary">2022 - Andamento</span>
-                                <h6 class="time-line-item-title">Machine Learning</h6>
-                                <p class="time-line-item-subtitle">Coursera</p>
-                                <p class="time-line-item-content" align="justify">O curso aborda aprendizagem supervisionada, aprendizagem não supervisionada, melhores técnicas de aprendizagem automática, 
-                                    estudos de caso e aplicações de algoritmos na construção de robôs inteligentes (percepção, controle), reconhecimento de texto (para pesquisa na web, anti-spam),
-                                     visão computacional, informática médica, 
-                                    áudio, mineração de dados, entre muitas outras áreas de aplicação.
                                 </p>
                             </li>
                             <li class="time-line-item">
